# scikit-build-core-example

./: README.md
.github/workflows/: ci.yml
subdir/: .gitignore  pyproject.toml
subdir/src/: basic_math.cpp
subdir/src/example_pkg/: __init__.py
