[build-system]
requires = [
  "scikit-build-core",
  "pybind11",
  ]
build-backend = "scikit_build_core.build"


[project]
name = "example-pkg"
dynamic = ["version"]
description = "Example package for demonstration"
readme = "README.md"
authors = [
  { name = "Matthew Feickert", email = "matthew.feickert@cern.ch" },
]
maintainers = [
  { name = "Matthew Feickert", email = "matthew.feickert@cern.ch" },
]
requires-python = ">=3.8"

dependencies = [
    "numpy",
]

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/example_pkg/_version.py"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
# Need to give root as we aren't at the same level as the git repo
root = ".."
# Need to provide path relative to root
write_to = "subdir/src/example_pkg/_version.py"

# https://github.com/pypa/setuptools_scm/blob/5b1c77b71ebf66413f3ecfea2222b5b3e0a26bcd/docs/config.md?plain=1#L30
# recommends modern versions like:
#
# relative_to = ".."
# version_file = "subdir/src/example_pkg/_version.py"
#
# but doesn't seem to have succes
