[build-system]
requires = [
  "scikit-build-core>=0.5.1",
  "pybind11>=2.10.3"
  ]
build-backend = "scikit_build_core.build"


[project]
name = "example-pkg"
dynamic = ["version"]
description = "Example package for demonstration"
readme = "README.md"
authors = [
  { name = "Matthew Feickert", email = "matthew.feickert@cern.ch" },
]
maintainers = [
  { name = "Matthew Feickert", email = "matthew.feickert@cern.ch" },
]
requires-python = ">=3.8"

dependencies = [
    "numpy",
]

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
# Ignore the commit hash in version
local_scheme = "no-local-version"
# Need to give root as we aren't at the same level as the git repo
root = ".."

[[tool.scikit-build.generate]]
path = "example_pkg/_version.py"
template = '''
version = "${version}"
'''

# https://github.com/pypa/setuptools_scm/blob/5b1c77b71ebf66413f3ecfea2222b5b3e0a26bcd/docs/config.md?plain=1#L30
# recommends modern versions like:
#
# relative_to = ".."
# version_file = "subdir/src/example_pkg/_version.py"
#
# but doesn't seem to have succes
