[build-system]
requires = [
  "scikit-build-core>=0.5.0",
  "pybind11>=2.10.0"
  ]
build-backend = "scikit_build_core.build"


[project]
name = "example-pkg"
dynamic = ["version"]
description = "Example package for demonstration"
readme = "README.md"
authors = [
  { name = "Matthew Feickert", email = "matthew.feickert@cern.ch" },
]
maintainers = [
  { name = "Matthew Feickert", email = "matthew.feickert@cern.ch" },
]
requires-python = ">=3.8"

dependencies = [
    "numpy",
]

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
# Ignore the commit hash in version
local_scheme = "no-local-version"
# Need to give root as we aren't at the same level as the git repo
root = ".."

[[tool.scikit-build.generate]]
path = "example_pkg/_version.py"
template = '''
version = "${version}"
'''
